--- a/form/06-styles.css
+++ b/form/06-styles.css
@@ -131,12 +131,7 @@ button:-moz-focusring {
 }
 
 fieldset {
-    padding: .35em .75em .625em;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    border: none;
-    padding: 0 0 2rem;
+    padding: .35em .75em .625em
 }
 
 legend {
@@ -206,6 +201,8 @@ template {
     --color-white: #ffffff;
     --color-grey: #a0a0a0;
     --color-light-grey: #f3f3f3;
+    --color-red: #cd3e65;
+    --color-green: #08805b;
     --color-dark-grey: #353535;
 
     --text-color: var(--color-black);
@@ -850,12 +847,9 @@ ul.row {
     content: "";
 }
 
-/*** TAG LIST STYLES ***/
-/* Add your Tag List styles here */
-
 /*** FORM ***/
 /* Comment section
-============================= */
+      =============================== */
 .post-comments {
     width: 80%;
     margin: 10rem 0 0 auto;
@@ -866,9 +860,8 @@ ul.row {
     font-variant: small-caps;
 }
 
-/* Add a new comment section */
-/* Basic form
-============================= */
+/* Basic form 
+      ================================ */
 form {
     display: flex;
     flex-direction: column;
@@ -876,6 +869,13 @@ form {
     margin: 0;
 }
 
+fieldset {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border: 0;
+    padding: 0 0 2rem;
+}
 
 label {
     cursor: pointer;
@@ -885,31 +885,28 @@ label {
     padding: 0 0 .5rem;
 }
 
-/* Target all input type text, all input type email, and all textarea */
-input[type="text"],
-input[type="email"],
+input[type=text],
+input[type=email],
 textarea {
     position: relative;
     width: 100%;
     padding: 1.2rem;
     line-height: 1;
-    border: 0.1rem solid var(--color-black);
+    border: .1rem solid var(--color-black);
     background-color: var(--color-white);
     box-shadow: none;
     outline: 0;
 }
 
-/* Target all input type text and all input type email */
-input[type="text"],
-input[type="email"] {
+input[type=text],
+input[type=email] {
     padding-right: 3rem;
 }
 
-/* Target the focus state of all input type text, all input type email, and all textarea */
-input[type="text"]:focus,
-input[type="email"]:focus,
+input[type=text]:focus,
+input[type=email]:focus,
 textarea:focus {
-    border: 0.1rem solid var(--color-grey);
+    border: .1rem solid var(--color-grey);
     background-color: var(--color-light-grey);
 }
 
@@ -918,9 +915,8 @@ textarea:focus {
     font-size: var(--font-size-small);
 }
 
-
 /* Form group
-============================= */
+      ============================= */
 .form-group {
     padding: 1rem;
     margin: 0;
@@ -929,11 +925,11 @@ textarea:focus {
 
 .form-group:focus-within {
     background-color: var(--color-light-grey);
-    transition: 0.3s;
+    transition: .3s;
 }
 
 /* Form field
-============================= */
+      ============================= */
 .form-field-container {
     position: relative;
 }
@@ -943,7 +939,7 @@ textarea:focus {
 }
 
 /* Form help
-============================= */
+      ============================= */
 .form-group .form-help {
     margin: 0;
     line-height: 1.3;
@@ -951,18 +947,17 @@ textarea:focus {
     color: var(--color-dark-grey);
     font-size: var(--font-size-small);
     max-height: 0;
-    transition: 0.3s;
+    transition: .3s;
     overflow: hidden;
 }
 
 .form-group:focus-within .form-help {
     max-height: 20rem;
-    margin: 0.4rem 0 0;
+    margin: .4rem 0 0;
 }
 
 /* Form error handling
-============================= */
-
+      ============================= */
 /* The following code is used to place the icon in the after pseudo element. Because after and before are not possible in an input, we need to use a span that will be positioned on the right of our input. */
 
 input:not(:placeholder-shown)~.form-field-icon::after {
