--- a/accessibility/keyboard/01-styles.css
+++ b/accessibility/keyboard/01-styles.css
@@ -761,6 +761,10 @@ ul.row {
     padding-top: 5rem;
 }
 
+.article-page .header {
+    background-color: transparent;
+}
+
 @media only screen and (max-width: 767px) {
     .section-hero {
         margin: -0.1rem 0;
@@ -842,10 +846,6 @@ ul.row {
     transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
-.card-work:hover .card-inner {
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
 .card-work .card-title {
     text-align: center;
     margin: 0;
@@ -857,6 +857,7 @@ ul.row {
     display: block;
     text-decoration: none;
     padding-top: 45%;
+    opacity: 0;
 }
 
 .card-work .card-title a::after {
@@ -866,6 +867,13 @@ ul.row {
     right: 0;
     bottom: 0;
     content: '';
+}
+
+.card-work .card-title a:focus,
+.card-work:hover .card-title a {
+    opacity: 1;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 @media only screen and (max-width: 767px) {
@@ -882,19 +890,6 @@ ul.row {
     .card-work .card-title a {
         display: block;
         padding: 2rem 1rem 0 1rem;
-        opacity: 0;
-    }
-
-    /* For .card-work .card-title a with the a in state focus */
-    .card-work .card-title a:focus {
-        opacity: 1;
-    }
-
-    /* For .card-work:hover .card-title a */
-    .card-work:hover .card-title a {
-        opacity: 1;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
     }
 
     .card-work:hover .card-image {
